fix: Real fix on nav being covered by safari

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -166,7 +166,7 @@ button:active {
   justify-content: space-around;
 }
 .nav-links li {
-  padding: 12px;
+  padding: 15px;
 }
 .nav-links li a {
   color: var(--light-color);
@@ -219,6 +219,7 @@ button:active {
     flex-direction: column;
     align-items: flex-end;
     transition: all 0.6s;
+    justify-content: center;
   }
 
   .nav-links.open {
